--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -18,7 +18,12 @@
   line-height: 1.2;
   font-weight: 400;
   margin-bottom: 5px;
+  margin-top: 24px;
   color: #8b8b8b;
+}
+
+.form__label:first-of-type {
+  margin-top: 0;
 }
 
 .form__input {
@@ -27,7 +32,7 @@
   border-bottom: 1px solid #424242;
   background-color: inherit;
   color: #fff;
-  margin-bottom: 24px;
+  margin-bottom: 8px;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.21;
@@ -50,7 +55,6 @@
   font-size: 12px;
   line-height: 1.21;
   font-weight: 400;
-  opacity: 0;
 }
 
 .form__text {
