--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,7 +3,7 @@
   min-height: 122px;
   display: flex;
   justify-content: space-between;
-  background-color: #2f2f2f;
+  background-color: hsl(0, 0%, 18%);
   padding: 6px;
   color: #fff;
 }
@@ -20,6 +20,7 @@
   min-width: 220px;
   max-width: 220px;
   min-height: 122px;
+  max-height: 122px;
 }
 
 .movie__title {
