--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -27,6 +27,7 @@
   background-image: url("../../images/search-icon-gray.svg");
   background-repeat: no-repeat;
   background-position: 25px 25px;
+  position: relative;
 }
 
 .search-form__icon {
@@ -65,6 +66,15 @@
 
 .search-form__search-button:hover {
   opacity: 0.8;
+}
+
+.search-form__error {
+  position: absolute;
+  bottom: -20px;
+  left: 5px;
+  font-size: 13px;
+  line-height: 1.23;
+  color: #ee3465;
 }
 
 @media screen and (max-width: 1023px) {
