--- a/src/pages/Movies/Movies.css
+++ b/src/pages/Movies/Movies.css
@@ -21,8 +21,16 @@
 }
 
 .movies__more-button:hover {
-  opacity: 0.8;
+  opacity: 0.7;
   cursor: pointer;
+}
+
+.movies__not-found {
+  color: #FFF;
+  font-size: 14px;
+  line-height: 1.21;
+  max-width: 150px;
+  margin: 40px auto;
 }
 
 @media screen and (max-width: 1023px) {
