feat: Диплом часть 3

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -6,6 +6,12 @@
   background-color: hsl(0, 0%, 18%);
   padding: 6px;
   color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.movie:hover {
+  opacity: 0.7;
 }
 
 .movie__info {
@@ -52,6 +58,7 @@
   background-color: inherit;
   cursor: pointer;
   transition: opacity 1s linear;
+  z-index: 100;
 }
 
 .movie__dislike-button {
@@ -109,7 +116,8 @@
     justify-content: space-between;
   }
 
-  .movie__like-button {
+  .movie__like-button,
+  .movie__like-button-empty {
     margin-top: 2px;
     margin-right: 4px;
   }
